--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build Docker Image
+name: Build and Push Docker Image
 
 on:
   push:
@@ -18,14 +18,21 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      #      - name: Log in to DockerHub
-      #        uses: docker/login-action@v3
-      #        with:
-      #          username: ${{ secrets.DOCKER_USERNAME }}
-      #          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Log in to DockerHub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build Docker image
         run: docker build -t my-app:latest .
+
+      - name: Tag Docker image
+        run: docker tag my-app:latest your-dockerhub-username/my-app:latest
+
+      - name: Push Docker image to DockerHub
+        run: docker push your-dockerhub-username/my-app:latest
 
       - name: List Docker images
         run: docker images
