--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,14 +25,15 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build Docker image
-        run: docker build -t my-app:latest .
+      - name: Extract branch name
+        id: extract_branch
+        run: echo "BRANCH_NAME=$(echo ${GITHUB_REF#refs/heads/})" >> $GITHUB_ENV
 
-      - name: Tag Docker image
-        run: docker tag my-app:latest your-dockerhub-username/my-app:latest
+      - name: Build Docker image with branch name
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/${{ env.BRANCH_NAME }}:latest .
 
       - name: Push Docker image to DockerHub
-        run: docker push your-dockerhub-username/my-app:latest
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/${{ env.BRANCH_NAME }}:latest
 
       - name: List Docker images
         run: docker images
