--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,15 +28,16 @@ jobs:
 
       - name: Extract branch name
         id: extract_branch
-        run: echo "BRANCH_NAME=$(echo ${GITHUB_REF#refs/heads/})" >> $GITHUB_ENV
+        run: |
+          echo "BRANCH_NAME=$(echo ${GITHUB_REF#refs/heads/} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
 
       - name: Build Docker image
         run: |
-          docker build -t ghcr.io/${{ github.repository_owner }}/${{ env.BRANCH_NAME }}:latest .
+          docker build -t ghcr.io/${{ github.repository_owner }}/$(echo ${{ env.BRANCH_NAME }} | tr '[:upper:]' '[:lower:]'):latest .
 
       - name: Push Docker image to GitHub Packages
         run: |
-          docker push ghcr.io/${{ github.repository_owner }}/${{ env.BRANCH_NAME }}:latest
+          docker push ghcr.io/${{ github.repository_owner }}/$(echo ${{ env.BRANCH_NAME }} | tr '[:upper:]' '[:lower:]'):latest
 
       - name: List Docker images
         run: docker images
