--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,13 +31,24 @@ jobs:
         run: |
           echo "BRANCH_NAME=$(echo ${GITHUB_REF#refs/heads/} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
 
+      - name: Convert repository owner to lowercase
+        id: lowercase_owner
+        run: |
+          echo "REPO_OWNER=$(echo ${{ github.repository_owner }} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
+
+      - name: Generate image tag using commit SHA
+        id: version
+        run: |
+          SHORT_SHA=$(echo ${{ github.sha }} | cut -c1-7)
+          echo "VERSION=$SHORT_SHA" >> $GITHUB_ENV
+
       - name: Build Docker image
         run: |
-          docker build -t ghcr.io/${{ github.repository_owner }}/$(echo ${{ env.BRANCH_NAME }} | tr '[:upper:]' '[:lower:]'):latest .
+          docker build -t ghcr.io/${{ env.REPO_OWNER }}/${{ env.BRANCH_NAME }}:${{ env.VERSION }} .
 
       - name: Push Docker image to GitHub Packages
         run: |
-          docker push ghcr.io/${{ github.repository_owner }}/$(echo ${{ env.BRANCH_NAME }} | tr '[:upper:]' '[:lower:]'):latest
+          docker push ghcr.io/${{ env.REPO_OWNER }}/${{ env.BRANCH_NAME }}:${{ env.VERSION }}
 
       - name: List Docker images
         run: docker images
