--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - main
+    tags:
+      - "v*.*.*" # Run when pushing version tags like v1.0.0, v1.2.3
+
   pull_request:
     branches:
       - main
@@ -15,6 +18,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0 # Ensure we fetch all tags
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -26,21 +31,28 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GHCR_TOKEN }}
 
-      - name: Extract branch name
+      - name: Extract branch name (for non-tagged pushes)
+        if: startsWith(github.ref, 'refs/heads/')
         id: extract_branch
+        run: echo "BRANCH_NAME=${GITHUB_REF#refs/heads/}" >> $GITHUB_ENV
+
+      - name: Get latest Git tag (for versioning)
+        id: version
         run: |
-          echo "BRANCH_NAME=$(echo ${GITHUB_REF#refs/heads/} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
+          if [[ "${{ github.ref }}" == refs/tags/* ]]; then
+            VERSION=${GITHUB_REF#refs/tags/}
+            BRANCH_NAME=$VERSION
+          else
+            VERSION="latest"
+            BRANCH_NAME=${{ env.BRANCH_NAME }}
+          fi
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
+          echo "BRANCH_NAME=$BRANCH_NAME" >> $GITHUB_ENV
 
       - name: Convert repository owner to lowercase
         id: lowercase_owner
         run: |
           echo "REPO_OWNER=$(echo ${{ github.repository_owner }} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
-
-      - name: Generate image tag using commit SHA
-        id: version
-        run: |
-          SHORT_SHA=$(echo ${{ github.sha }} | cut -c1-7)
-          echo "VERSION=$SHORT_SHA" >> $GITHUB_ENV
 
       - name: Build Docker image
         run: |
