--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,27 +47,25 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GHCR_TOKEN }}
 
-      - name: Extract branch name
-        run: echo "BRANCH_NAME=main" >> $GITHUB_ENV
-
-      - name: Get latest Git tag
+      - name: Get version from Git tag or fallback to commit SHA
         id: version
         run: |
           VERSION=$(git describe --tags --abbrev=0 2>/dev/null || echo "v0.0.1")
+          VERSION_SHORT=$(git rev-parse --short HEAD)
           echo "VERSION=${VERSION}" >> $GITHUB_ENV
+          echo "VERSION_SHORT=${VERSION_SHORT}" >> $GITHUB_ENV
 
-      - name: Convert repository owner to lowercase
-        id: lowercase_owner
+      - name: Build Docker image with tag
         run: |
-          echo "REPO_OWNER=$(echo ${{ github.repository_owner }} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
-
-      - name: Build Docker image
-        run: |
-          docker build -t ghcr.io/${{ env.REPO_OWNER }}/${{ env.BRANCH_NAME }}:${{ env.VERSION }} .
+          IMAGE_TAG=ghcr.io/${{ github.repository_owner }}/${
+            { github.repository }}:${{ env.VERSION }}-${{ env.VERSION_SHORT }}
+          echo "Building Docker image with tag $IMAGE_TAG"
+          docker build -t $IMAGE_TAG .
 
       - name: Push Docker image to GitHub Packages
         run: |
-          docker push ghcr.io/${{ env.REPO_OWNER }}/${{ env.BRANCH_NAME }}:${{ env.VERSION }}
+          docker push ghcr.io/${{ github.repository_owner }}/${
+            { github.repository }}:${{ env.VERSION }}-${{ env.VERSION_SHORT }}
 
       - name: List Docker images
         run: docker images
