--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,10 +57,10 @@ jobs:
 
       - name: Build Docker image with tag
         run: |
-          IMAGE_TAG=ghcr.io/${{ github.repository_owner }}/${
-            { github.repository }}:${{ env.VERSION }}-${{ env.VERSION_SHORT }}
+          IMAGE_TAG="ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:${{ env.VERSION }}-${{ env.VERSION_SHORT }}"
           echo "Building Docker image with tag $IMAGE_TAG"
           docker build -t $IMAGE_TAG .
+      
 
       - name: Push Docker image to GitHub Packages
         run: |
