--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,43 +3,22 @@ name: Build and Push Docker Image to GitHub Packages
 on:
   push:
     branches:
-      - main  # Only release from main branch
+      - main  # Trigger only on push to the main branch
 
 jobs:
-  release:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0 # Fetch all history for correct versioning
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-
-      - name: Install Dependencies
-        run: npm install -g semantic-release @semantic-release/changelog @semantic-release/commit-analyzer @semantic-release/release-notes-generator @semantic-release/github @semantic-release/git @semantic-release/exec
-
-      - name: Run Semantic Release
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: npx semantic-release
-
   build:
-    needs: release
     runs-on: ubuntu-latest
 
     steps:
+      # Step 1: Checkout code
       - name: Checkout code
         uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
 
+      # Step 2: Set up Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      # Step 3: Log in to GitHub Container Registry
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
@@ -47,25 +26,12 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GHCR_TOKEN }}
 
-      - name: Get version from Git tag or fallback to commit SHA
-        id: version
+      # Step 4: Build the Docker image
+      - name: Build Docker image
         run: |
-          VERSION=$(git describe --tags --abbrev=0 2>/dev/null || echo "v0.0.1")
-          VERSION_SHORT=$(git rev-parse --short HEAD)
-          echo "VERSION=${VERSION}" >> $GITHUB_ENV
-          echo "VERSION_SHORT=${VERSION_SHORT}" >> $GITHUB_ENV
+          docker build -t ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:latest .
 
-      - name: Build Docker image with tag
-        run: |
-          IMAGE_TAG="ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:${{ env.VERSION }}-${{ env.VERSION_SHORT }}"
-          echo "Building Docker image with tag $IMAGE_TAG"
-          docker build -t $IMAGE_TAG .
-      
-
+      # Step 5: Push the Docker image to GitHub Packages
       - name: Push Docker image to GitHub Packages
         run: |
-          docker push ghcr.io/${{ github.repository_owner }}/${
-            { github.repository }}:${{ env.VERSION }}-${{ env.VERSION_SHORT }}
-
-      - name: List Docker images
-        run: docker images
+          docker push ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:latest
