--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,31 +1,48 @@
-name: Build Docker Image
+name: Build and Push Docker Image to GitHub Packages
 
 on:
   push:
     branches:
-      - main
-  pull_request:
-    branches:
-      - main
+      - main    # Trigger on push to 'main'
+      - master  # Trigger on push to 'master'
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
+      # Step 1: Checkout code
       - name: Checkout code
         uses: actions/checkout@v3
 
+      # Step 2: Set up Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-#      - name: Log in to DockerHub
-#        uses: docker/login-action@v3
-#        with:
-#          username: ${{ secrets.DOCKER_USERNAME }}
-#          password: ${{ secrets.DOCKER_PASSWORD }}
 
+      # Step 3: Log in to GitHub Container Registry
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GHCR_TOKEN }}
+
+      # Step 4: Set image tag based on branch
+      - name: Set image tag based on branch
+        run: |
+          if [ "${GITHUB_REF}" == "refs/heads/main" ]; then
+            IMAGE_TAG="ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:main"
+          elif [ "${GITHUB_REF}" == "refs/heads/master" ]; then
+            IMAGE_TAG="ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:master"
+          fi
+          echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
+
+      # Step 5: Build Docker image
       - name: Build Docker image
-        run: docker build -t my-app:latest .
+        run: |
+          docker build -t $IMAGE_TAG .
 
-      - name: List Docker images
-        run: docker images
+      # Step 6: Push Docker image to GitHub Packages
+      - name: Push Docker image to GitHub Packages
+        run: |
+          docker push $IMAGE_TAG
