--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - main    # Trigger on push to 'main'
-      - master  # Trigger on push to 'master'
+      - dev  # Trigger on push to 'master'
 
 jobs:
   build:
