change the pipeline

--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -4,7 +4,8 @@ on:
   push:
     branches:
       - main    # Trigger on push to 'main'
-      - dev  # Trigger on push to 'master'
+      - master  # Trigger on push to 'master'
+      - dev     # Trigger on push to 'dev'
 
 jobs:
   build:
@@ -15,8 +16,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Step 2: Set up Docker Buildx
-      - name: Set up Docker Buildx
+        # Step 2: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
       # Step 3: Log in to GitHub Container Registry
@@ -27,14 +27,19 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GHCR_TOKEN }}
 
-      # Step 4: Set image tag based on branch
-      - name: Set image tag based on branch
+      # Step 4: Extract Branch and Commit SHA
+      - name: Set image tag based on branch and commit SHA
         run: |
-          if [ "${GITHUB_REF}" == "refs/heads/main" ]; then
-            IMAGE_TAG="ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:main"
-          elif [ "${GITHUB_REF}" == "refs/heads/master" ]; then
-            IMAGE_TAG="ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:master"
-          fi
+          # Extract the branch name from the Git reference
+          BRANCH_NAME=$(echo ${GITHUB_REF} | sed 's/refs\/heads\///')
+
+          # Get the commit SHA
+          COMMIT_SHA=$(git rev-parse --short HEAD)
+
+          # Set the image tag using the branch name and commit SHA
+          IMAGE_TAG="ghcr.io/${{ github.repository_owner }}/$BRANCH_NAME:$COMMIT_SHA"
+          
+          # Store the image tag for later use
           echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
 
       # Step 5: Build Docker image
