--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -16,7 +16,8 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-        # Step 2: Set up Docker Buildx
+      # Step 2: Set up Docker Buildx
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
       # Step 3: Log in to GitHub Container Registry
