--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,8 +3,9 @@ name: Build and Push Docker Image to GitHub Packages
 on:
   push:
     branches:
-      - main    # Trigger on push to 'main'
-      - master  # Trigger on push to 'master'
+      - main   # Trigger on push to 'main'
+      - master # Trigger on push to 'master'
+      - dev    # Trigger on push to 'dev'
 
 jobs:
   build:
@@ -27,14 +28,19 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GHCR_TOKEN }}
 
-      # Step 4: Set image tag based on branch
-      - name: Set image tag based on branch
+      # Step 4: Set image tag and repository path based on branch and commit SHA
+      - name: Set image tag and repository path
         run: |
-          if [ "${GITHUB_REF}" == "refs/heads/main" ]; then
-            IMAGE_TAG="ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:main"
-          elif [ "${GITHUB_REF}" == "refs/heads/master" ]; then
-            IMAGE_TAG="ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:master"
-          fi
+          # Extract the branch name from the Git reference
+          BRANCH_NAME=$(echo ${GITHUB_REF} | sed 's/refs\/heads\///')
+
+          # Get the commit SHA
+          COMMIT_SHA=$(git rev-parse --short HEAD)
+
+          # Set the image tag and repository path (package name) based on the branch and commit SHA
+          IMAGE_TAG="ghcr.io/${{ github.repository_owner }}/$BRANCH_NAME/asda:$COMMIT_SHA"
+
+          # Output the image tag to use in the next steps
           echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
 
       # Step 5: Build Docker image
