--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,26 +1,26 @@
 name: Build and Push Docker Image to GitHub Packages
 
 on:
-  push:
+  pull_request:
+    types:
+      - closed  # Trigger only when a PR is closed
     branches:
-      - main   # Trigger on push to 'main'
-      - master # Trigger on push to 'master'
-      - dev    # Trigger on push to 'dev'
+      - main
+      - master
+      - dev
 
 jobs:
   build:
+    if: github.event.pull_request.merged == true  # Only run if PR was merged
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout code
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Step 2: Set up Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      # Step 3: Log in to GitHub Container Registry
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
@@ -28,27 +28,17 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GHCR_TOKEN }}
 
-      # Step 4: Set image tag and repository path based on branch and commit SHA
       - name: Set image tag and repository path
         run: |
-          # Extract the branch name from the Git reference
-          BRANCH_NAME=$(echo ${GITHUB_REF} | sed 's/refs\/heads\///')
-
-          # Get the commit SHA
+          BRANCH_NAME=${{ github.base_ref }}  # Get base branch (e.g., main)
           COMMIT_SHA=$(git rev-parse --short HEAD)
-
-          # Set the image tag and repository path (package name) based on the branch and commit SHA
           IMAGE_TAG="ghcr.io/${{ github.repository_owner }}/$BRANCH_NAME:$COMMIT_SHA"
-
-          # Output the image tag to use in the next steps
           echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
 
-      # Step 5: Build Docker image
       - name: Build Docker image
         run: |
           docker build -t $IMAGE_TAG .
 
-      # Step 6: Push Docker image to GitHub Packages
       - name: Push Docker image to GitHub Packages
         run: |
           docker push $IMAGE_TAG
