--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -32,7 +32,7 @@ jobs:
         run: |
           BRANCH_NAME=${{ github.head_ref }}
           COMMIT_SHA=$(git rev-parse --short HEAD)
-          IMAGE_TAG="ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}:$COMMIT_SHA"
+          IMAGE_TAG="ghcr.io/${{ github.repository_owner }}/$BRANCH_NAME:$COMMIT_SHA"          
           echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
 
       - name: Build and push Docker image
