--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,53 +1,7 @@
-#name: Build and Push Docker Image to GitHub Packages
-#
-#on:
-#  pull_request:
-#    types:
-#      - closed  # Trigger only when a PR is closed
-#    branches:
-#      - main
-#      - master
-#      - dev
-#
-#jobs:
-#  build:
-#    if: github.event.pull_request.merged == true  # Only run if PR was merged
-#    runs-on: ubuntu-latest
-#
-#    steps:
-#      - name: Checkout code
-#        uses: actions/checkout@v3
-#
-#      - name: Set up Docker Buildx
-#        uses: docker/setup-buildx-action@v3
-#
-#      - name: Log in to GitHub Container Registry
-#        uses: docker/login-action@v3
-#        with:
-#          registry: ghcr.io
-#          username: ${{ github.actor }}
-#          password: ${{ secrets.GHCR_TOKEN }}
-#
-#      - name: Set image tag and container registry path
-#        run: |
-#          BRANCH_NAME=${{ github.base_ref }}  # Get base branch (e.g., main)
-#          COMMIT_SHA=$(git rev-parse --short HEAD)
-#          IMAGE_TAG="ghcr.io/${{ github.repository_owner }}/$BRANCH_NAME:$COMMIT_SHA"
-#          echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
-#
-#      - name: Build Docker image
-#        run: |
-#          docker build -t $IMAGE_TAG .
-#
-#      - name: Push Docker image to GitHub Packages
-#        run: |
-#          docker push $IMAGE_TAG
 name: Build and Push Docker Image to GitHub Packages
 
 on:
-  pull_request:
-    types:
-      - closed
+  push:
     branches:
       - main
       - master
@@ -55,7 +9,6 @@ on:
 
 jobs:
   build:
-    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
 
     steps:
@@ -72,17 +25,17 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GHCR_TOKEN }}
 
-      - name: Set image tag and container registry path
+      - name: Set image tag
         run: |
-          BRANCH_NAME=$(echo "${{ github.ref_name }}" | tr '[:upper:]' '[:lower:]')
           COMMIT_SHA=$(git rev-parse --short HEAD)
-          IMAGE_TAG="ghcr.io/${{ github.repository_owner }}/$BRANCH_NAME:$COMMIT_SHA"
+          IMAGE_TAG="ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}:$COMMIT_SHA"
           echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
 
-      - name: Build Docker image
-        run: |
-          docker build --platform linux/amd64 -t $IMAGE_TAG .
-
-      - name: Push Docker image to GitHub Packages
-        run: |
-          docker push $IMAGE_TAG
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: ${{ env.IMAGE_TAG }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
