--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
           ref: ${{ github.base_ref }}
           fetch-depth: 0
 
-      - name: Ensure correct branch is checked out
+      - name: Ensure correct branch is checked out yes
         run: |
           git checkout ${{ github.base_ref }}
           git pull origin ${{ github.base_ref }}
