--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,9 @@
 name: Build and Push Docker Image to GitHub Packages
 
 on:
-  push:
+  pull_request:
+    types:
+      - closed
     branches:
       - main
       - master
@@ -9,11 +11,21 @@ on:
 
 jobs:
   build:
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout base branch (target branch)
         uses: actions/checkout@v3
+        with:
+          ref: ${{ github.base_ref }}
+          fetch-depth: 0
+
+      - name: Ensure correct branch is checked out yes
+        run: |
+          git checkout ${{ github.base_ref }}
+          git pull origin ${{ github.base_ref }}
+          echo "Current branch: $(git branch --show-current)"
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -23,12 +35,13 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.GHCR_TOKEN }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set image tag
         run: |
+          BRANCH_NAME=${{ github.base_ref }}
           COMMIT_SHA=$(git rev-parse --short HEAD)
-          IMAGE_TAG="ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}:$COMMIT_SHA"
+          IMAGE_TAG="ghcr.io/${{ github.repository_owner }}/$BRANCH_NAME:$COMMIT_SHA"
           echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
 
       - name: Build and push Docker image
