push to master checkout branch

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,7 @@
 name: Build and Push Docker Image to GitHub Packages
 
 on:
-  pull_request:
-    types:
-      - closed
+  push:
     branches:
       - main
       - master
