--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
       - master
-      - dev
+      - dev  # Trigger only on changes to the main, master, or dev branches
 
 jobs:
   build:
@@ -15,13 +15,12 @@ jobs:
       - name: Checkout base branch (target branch)
         uses: actions/checkout@v3
         with:
-          ref: ${{ github.base_ref }}
-          fetch-depth: 0
+          ref: ${{ github.ref }}  # Checkout the branch that received the merge
 
-      - name: Ensure correct branch is checked out yes
+      - name: Ensure correct branch is checked out
         run: |
-          git checkout ${{ github.base_ref }}
-          git pull origin ${{ github.base_ref }}
+          git checkout ${{ github.ref }}
+          git pull origin ${{ github.ref }}
           echo "Current branch: $(git branch --show-current)"
 
       - name: Set up Docker Buildx
@@ -36,7 +35,7 @@ jobs:
 
       - name: Set image tag
         run: |
-          BRANCH_NAME=${{ github.base_ref }}
+          BRANCH_NAME=${{ github.ref_name }}  
           COMMIT_SHA=$(git rev-parse --short HEAD)
           IMAGE_TAG="ghcr.io/${{ github.repository_owner }}/$BRANCH_NAME:$COMMIT_SHA"
           echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
